posts business logic. next: tests